@@ -1,4 +1,8 @@
 
+=== 2010-05-07
+
+* Support for Firefox
+
 === 1.0.0 / 2009-10-08
 
 * Specs for Agent#==
